# rust-learn

./: README.md  main.rs
ZKAttestify-Sp1-verifier/: .gitignore  .gitmodules  Cargo.toml  README.md
ZKAttestify-Sp1-verifier/examples/dob/dob-program/: Cargo.toml
ZKAttestify-Sp1-verifier/examples/dob/dob-program/src/: main.rs
ZKAttestify-Sp1-verifier/examples/dob/dob-script/: Cargo.toml  build.rs
ZKAttestify-Sp1-verifier/examples/dob/dob-script/src/: main.rs  onchain_verify.rs  signature.rs  structs.rs
ZKAttestify-Sp1-verifier/examples/dob/json/: DOB-Attestaion_groth16_proof.json  DOB-Attestaion_plonk_proof.json
ZKAttestify-Sp1-verifier/examples/dob/lib/: Cargo.toml
ZKAttestify-Sp1-verifier/examples/proof-of-residence/: .env.example  README.md
ZKAttestify-Sp1-verifier/examples/proof-of-residence/json/: POR-Attestaion_groth16_proof.json  POR-Attestaion_plonk_proof.json
ZKAttestify-Sp1-verifier/examples/proof-of-residence/lib/: Cargo.toml
ZKAttestify-Sp1-verifier/examples/proof-of-residence/lib/src/: lib.rs
ZKAttestify-Sp1-verifier/examples/proof-of-residence/program/: Cargo.toml
ZKAttestify-Sp1-verifier/examples/proof-of-residence/program/src/: main.rs  signature_verification.rs
ZKAttestify-Sp1-verifier/examples/proof-of-residence/script/: Cargo.toml
ZKAttestify-Sp1-verifier/examples/proof-of-residence/script/src/: input.json  main.rs  onchain_verify.rs  structs.rs
ZKAttestify-Sp1-verifier/examples/solidity-verifier/: README.md
ZKAttestify-Sp1-verifier/examples/solidity-verifier/abi/: Groth16_Verifier.json
ZKAttestify-Sp1-verifier/examples/solidity-verifier/contracts/: Groth16_Verifer.sol
ZKAttestify-Sp1-verifier/examples/wasm_verifier/: dob.js  package.json
blog_os/: Cargo.toml
blog_os/src/: lib.rs  main.rs  vga_buffer.rs
blog_os/tests/: basic_boot.rs
dsa/src/hard/: lib.rs
dsa/src/medium/: is_palindrome.rs  valid_parenthesis.rs
grrs/: Cargo.toml
grrs/src/: main.rs
grrs/tests/: cli.rs
guessing-game/src/: main.rs
hello-package/src/: back_of_house.rs  lib.rs  main.rs
lagrange-interpolation/: Cargo.toml
programming-rust-book/: Cargo.toml
programming-rust-book/actix-gcd/: Cargo.toml
programming-rust-book/actix-gcd/src/: main.rs
programming-rust-book/mandelbrot/: Cargo.toml
programming-rust-book/mandelbrot/src/: main.rs
programming-rust-book/quickreplace/: Cargo.toml
programming-rust-book/quickreplace/src/: main.rs
programming-rust-book/src/: main.rs
rustlings/: .rustlings-state.txt
rustlings/exercises/02_functions/: functions1.rs
rustlings/exercises/03_if/: if1.rs  if2.rs
rustlings/exercises/04_primitive_types/: primitive_types1.rs  primitive_types3.rs
rustlings/exercises/06_move_semantics/: move_semantics3.rs  move_semantics4.rs
rustlings/exercises/07_structs/: structs2.rs  structs3.rs
rustlings/exercises/08_enums/: enums2.rs  enums3.rs
rustlings/exercises/09_strings/: strings3.rs  strings4.rs
rustlings/exercises/11_hashmaps/: hashmaps2.rs  hashmaps3.rs
rustlings/exercises/12_options/: options1.rs  options2.rs
rustlings/exercises/13_error_handling/: errors2.rs  errors3.rs  errors6.rs
rustlings/exercises/14_generics/: generics1.rs
rustlings/exercises/15_traits/: traits3.rs  traits4.rs
rustlings/exercises/17_tests/: tests2.rs  tests3.rs
rustlings/exercises/18_iterators/: iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings/exercises/19_smart_pointers/: rc1.rs
rustlings/exercises/20_threads/: threads1.rs  threads3.rs
rustlings/exercises/22_clippy/: clippy3.rs
rustlings/exercises/23_conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/quizzes/: quiz1.rs  quiz2.rs  quiz3.rs
rusty_store/: Cargo.toml  data.json
rusty_store/src/: cli.rs  main.rs  store.rs
storage/: challenges.json  user.json
sumcheck-implementation/: Cargo.toml
sumcheck-implementation/src/: main.rs
variables/src/: main.rs
