[workspace]
members = ["verifier", "examples/dob/dob-program", "examples/dob/dob-script","examples/proof-of-residence/program","examples/proof-of-residence/script"]
resolver = "2"

[workspace.dependencies]
# sp1-verifier = { git = "https://github.com/succinctlabs/sp1", rev = "d13675665bff079b6da4f115cb322eadca6bb50e" }
# sp1-sdk = { git = "https://github.com/succinctlabs/sp1", rev = "d13675665bff079b6da4f115cb322eadca6bb50e" }
# sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", rev = "d13675665bff079b6da4f115cb322eadca6bb50e" }
# sp1-build = { git = "https://github.com/succinctlabs/sp1", rev = "d13675665bff079b6da4f115cb322eadca6bb50e" }
alloy-sol-types = "0.8.15"

# Use this if 1. You're not using the network prover or 2. after a new release of sp1 is out.
sp1-verifier = { git = "https://github.com/succinctlabs/sp1" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1" }
sp1-build = { git = "https://github.com/succinctlabs/sp1" }
