[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

# The profile used for cargo build
[profile.dev]
panic = 'abort' # diable stack unwinding on panic

# The profile used for cargo build --release
[profile.release]
panic = 'abort' # diable stack unwinding on panic

[[bin]]
name = "blog_os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
