[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

# The profile used for cargo build
[profile.dev]
# panic = 'abort' # diable stack unwinding on panic

# The profile used for cargo build --release
[profile.release]
panic = 'abort' # diable stack unwinding on panic

[[bin]]
name = "blog_os"
test = true
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33  
test-timeout = 300 # (in seconds) 

[[test]]
name = "should_panic"
harness = false