[package]
name = "dob-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm.workspace = true
alloy-sol-types = { workspace = true }
dob-lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
ethers-core = { version = "2.0.14" }
chrono = "=0.4.38"
