[package]
version = "0.1.0"
name = "proof-of-residence-script"
edition = "2021"

[dependencies]
sp1-sdk.workspace = true
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
proof-residence-lib = { path = "../lib" }
ethers-core = { version = "2.0.14"}
ethers-contract = { version = "2.0.14"}
chrono = "=0.4.38"
anyhow = "1.0.40" 
ethers = "2.0.14"
eyre = "0.6.8"
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"

[build-dependencies]
sp1-build.workspace = true
sp1-helper = "2.0.0"